Finalisation de tous les fichiers

--- a/k-pop_pages/k-pop.html
+++ b/k-pop_pages/k-pop.html
@@ -10,11 +10,11 @@
   <body class="kpop-theme">
     <!-- ================= HEADER ================= -->
     <header class="header">
-      <a href="index.html" class="home-btn">Accueil</a>
+      <a href="../index.html" class="home-btn">Accueil</a>
       <h1 class="center-title">K-POP</h1>
       <div class="genre-buttons">
-        <a href="pop.html" class="genre-btn">POP</a>
-        <a href="rnb.html" class="genre-btn">RNB</a>
+        <a href="../pop_pages/pop.html" class="genre-btn">POP</a>
+        <a href="../rnb_pages/rnb.html" class="genre-btn">RNB</a>
         <a href="k-pop.html" class="genre-btn">K-POP</a>
       </div>
     </header>
