ajout page k-pop

--- a/k-pop_pages/k-pop.html
+++ b/k-pop_pages/k-pop.html
@@ -269,7 +269,7 @@
               <div class="card">
                 <div class="card-front">
                   <img src="../images/k-pop_aespa_base.jpeg" alt="Aespa" />
-                  <div class="card-name">Aespa 🇹🇭</div>
+                  <div class="card-name">Aespa 🇰🇷</div>
                 </div>
                 <div class="card-back">
                   <div class="card-back-name">Aespa</div>
@@ -285,7 +285,7 @@
                     src="../images/k-pop_oneoreight_base.jpg"
                     alt="One or Eight"
                   />
-                  <div class="card-name">One or Eight 🇰🇷</div>
+                  <div class="card-name">One or Eight 🇯🇵</div>
                 </div>
                 <div class="card-back">
                   <div class="card-back-name">One or Eight</div>
@@ -395,7 +395,7 @@
                     src="../images/k-pop_treasure_base.jpeg"
                     alt="Treasure"
                   />
-                  <div class="card-name">Treasure 🇵🇭</div>
+                  <div class="card-name">Treasure 🇰🇷</div>
                 </div>
                 <div class="card-back">
                   <div class="card-back-name">Treasure</div>
@@ -2544,7 +2544,9 @@
               <h3>Galerie</h3>
               <div class="gallery">
                 <a href="../images/k-pop_oneus_hwanwoong.jpg" class="lb"
-                  ><img src="../images/k-pop_oneus_hwanwoong.jpg" alt="Hwanwoong"
+                  ><img
+                    src="../images/k-pop_oneus_hwanwoong.jpg"
+                    alt="Hwanwoong"
                 /></a>
                 <a href="../images/k-pop_oneus_leedo.jpg" class="lb"
                   ><img src="../images/k-pop_oneus_leedo.jpg" alt="Leedo"
@@ -2695,6 +2697,7 @@
                 </div>
                 <div class="artist-text">
                   <h2>Xikers</h2>
+                  <p><strong>Pays :</strong> Corée du Sud</p>
                   <p>
                     xikers (stylisé en minuscules, anciennement connu sous le
                     nom de KQ Fellaz 2) est un groupe de K-pop sud-coréen formé
@@ -2748,21 +2751,21 @@
                   <a
                     href="https://www.youtube.com/watch?v=HefrSFeMyPs"
                     target="_blank"
-                    >TRICKY HOUSE - 20</a
+                    >TRICKY HOUSE - 2023</a
                   >
                 </li>
                 <li>
                   <a
                     href="https://www.youtube.com/watch?v=Rr2i3L5LgeQ"
                     target="_blank"
-                    >ROCKSTAR - 20</a
+                    >ROCKSTAR - 2023</a
                   >
                 </li>
                 <li>
                   <a
                     href="https://www.youtube.com/watch?v=_mha4kFtHD4"
                     target="_blank"
-                    >We Don't Stop - 20</a
+                    >We Don't Stop - 2024</a
                   >
                 </li>
               </ul>
@@ -2789,7 +2792,9 @@
                   ><img src="../images/k-pop_xikers_hyunwoo.jpg" alt="Hyunwoo"
                 /></a>
                 <a href="../images/k-pop_xikers_junghoon.jpeg" class="lb"
-                  ><img src="../images/k-pop_xikers_junghoon.jpeg" alt="Junghoon"
+                  ><img
+                    src="../images/k-pop_xikers_junghoon.jpeg"
+                    alt="Junghoon"
                 /></a>
                 <a href="../images/k-pop_xikers_seeun.jpeg" class="lb"
                   ><img src="../images/k-pop_xikers_seeun.jpeg" alt="Seeun"
@@ -2824,11 +2829,12 @@
                     <em>Enough</em>.
                   </p>
                   <p>
-                    Le groupe est composé de six membres : Hanyu (le leader), Zihao,
-                    Xinlong, Zeyu, MingRui et Shuyang. BOY STORY est connu pour
-                    son style musical qui mélange la C-pop, le Mandopop et le
-                    hip-hop, avec une emphase particulière sur des chorégraphies
-                    très énergiques et une image de jeunesse décomplexée.
+                    Le groupe est composé de six membres : Hanyu (le leader),
+                    Zihao, Xinlong, Zeyu, MingRui et Shuyang. BOY STORY est
+                    connu pour son style musical qui mélange la C-pop, le
+                    Mandopop et le hip-hop, avec une emphase particulière sur
+                    des chorégraphies très énergiques et une image de jeunesse
+                    décomplexée.
                   </p>
                   <p>
                     Depuis leurs débuts, ils se sont rapidement imposés dans
@@ -2879,16 +2885,22 @@
                   ><img src="../images/k-pop_boystory_zihao.jpeg" alt="Zihao"
                 /></a>
                 <a href="../images/k-pop_boystory_xinlong.jpeg" class="lb"
-                  ><img src="../images/k-pop_boystory_xinlong.jpeg" alt="Xinlong"
+                  ><img
+                    src="../images/k-pop_boystory_xinlong.jpeg"
+                    alt="Xinlong"
                 /></a>
                 <a href="../images/k-pop_boystory_zeyu.jpg" class="lb"
                   ><img src="../images/k-pop_boystory_zeyu.jpg" alt="Zeyu"
                 /></a>
                 <a href="../images/k-pop_boystory_minryu.jpeg" class="lb"
-                  ><img src="../images/k-pop_boystory_minryu.jpeg" alt="MingRui"
+                  ><img
+                    src="../images/k-pop_boystory_minryu.jpeg"
+                    alt="MingRui"
                 /></a>
                 <a href="../images/k-pop_boystory_shuyang.jpeg" class="lb"
-                  ><img src="../images/k-pop_boystory_shuyang.jpeg" alt="Shuyang"
+                  ><img
+                    src="../images/k-pop_boystory_shuyang.jpeg"
+                    alt="Shuyang"
                 /></a>
                 <a href="../images/k-pop_boystory1.jpeg" class="lb"
                   ><img src="../images/k-pop_boystory1.jpeg" alt="boystory 1"
@@ -2920,11 +2932,12 @@
                     groupe est composé des meilleurs garçons, destinés à devenir
                     les stars de l'industrie K-pop. Les fans du groupe sont
                     appelés les The B. Le groupe est actuellement composé de dix
-                    membres (depuis 2019 et 2025) : Sangyeon (le leader), Jacob, Younghoon,
-                    Hyunjae, Juyeon, Kevin, New, Q, Sunwoo et Eric. THE BOYZ est
-                    connu pour son énergie scénique, ses concepts variés allant
-                    du sombre au frais, et ses performances synchronisées,
-                    combinant des éléments de hip-hop, de R&B et de synthpop.
+                    membres (depuis 2019 et 2025) : Sangyeon (le leader), Jacob,
+                    Younghoon, Hyunjae, Juyeon, Kevin, New, Q, Sunwoo et Eric.
+                    THE BOYZ est connu pour son énergie scénique, ses concepts
+                    variés allant du sombre au frais, et ses performances
+                    synchronisées, combinant des éléments de hip-hop, de R&B et
+                    de synthpop.
                   </p>
                   <p>
                     Depuis leurs débuts, THE BOYZ s'est distingué par des
@@ -2983,16 +2996,22 @@
               <h3>Galerie</h3>
               <div class="gallery">
                 <a href="../images/k-pop_theboyz_sangyeon.jpg" class="lb"
-                  ><img src="../images/k-pop_theboyz_sangyeon.jpg" alt="Sangyeon"
+                  ><img
+                    src="../images/k-pop_theboyz_sangyeon.jpg"
+                    alt="Sangyeon"
                 /></a>
                 <a href="../images/k-pop_theboyz_jacob.jpg" class="lb"
                   ><img src="../images/k-pop_theboyz_jacob.jpg" alt="Jacob"
                 /></a>
                 <a href="../images/k-pop_theboyz_younghoon.jpeg" class="lb"
-                  ><img src="../images/k-pop_theboyz_younghoon.jpeg" alt="Younghoon"
+                  ><img
+                    src="../images/k-pop_theboyz_younghoon.jpeg"
+                    alt="Younghoon"
                 /></a>
                 <a href="../images/k-pop_theboyz_hyunjae.jpeg" class="lb"
-                  ><img src="../images/k-pop_theboyz_hyunjae.jpeg" alt="Hyunjae"
+                  ><img
+                    src="../images/k-pop_theboyz_hyunjae.jpeg"
+                    alt="Hyunjae"
                 /></a>
                 <a href="../images/k-pop_theboyz_juyeon.jpg" class="lb"
                   ><img src="../images/k-pop_theboyz_juyeon.jpg" alt="Juyeon"
@@ -3098,7 +3117,9 @@
               <h3>Galerie</h3>
               <div class="gallery">
                 <a href="../images/k-pop_treasure_choihyunsuk.jpg" class="lb"
-                  ><img src="../images/k-pop_treasure_choihyunsuk.jpg" alt="Choi Hyun-suk"
+                  ><img
+                    src="../images/k-pop_treasure_choihyunsuk.jpg"
+                    alt="Choi Hyun-suk"
                 /></a>
                 <a href="../images/k-pop_treasure_jihoon.jpeg" class="lb"
                   ><img src="../images/k-pop_treasure_jihoon.jpeg" alt="Jihoon"
@@ -3110,22 +3131,30 @@
                   ><img src="../images/k-pop_treasure_junkyu.jpeg" alt="Junkyu"
                 /></a>
                 <a href="../images/k-pop_treasure_yoonjaehyuk.jpg" class="lb"
-                  ><img src="../images/k-pop_treasure_yoonjaehyuk.jpg" alt="Yoon Jae-hyuk"
+                  ><img
+                    src="../images/k-pop_treasure_yoonjaehyuk.jpg"
+                    alt="Yoon Jae-hyuk"
                 /></a>
                 <a href="../images/k-pop_treasure_asahi.jpg" class="lb"
                   ><img src="../images/k-pop_treasure_asahi.jpg" alt="Asahi"
                 /></a>
                 <a href="../images/k-pop_treasure_doyoung.jpeg" class="lb"
-                  ><img src="../images/k-pop_treasure_doyoung.jpeg" alt="Doyoung"
+                  ><img
+                    src="../images/k-pop_treasure_doyoung.jpeg"
+                    alt="Doyoung"
                 /></a>
                 <a href="../images/k-pop_treasure_haruto.jpeg" class="lb"
                   ><img src="../images/k-pop_treasure_haruto.jpeg" alt="Haruto"
                 /></a>
                 <a href="../images/k-pop_treasure_parkjeongwoo.jpeg" class="lb"
-                  ><img src="../images/k-pop_treasure_parkjeongwoo.jpeg" alt="Park Jeong-woo"
+                  ><img
+                    src="../images/k-pop_treasure_parkjeongwoo.jpeg"
+                    alt="Park Jeong-woo"
                 /></a>
                 <a href="../images/k-pop_treasure_sojunghwan.jpeg" class="lb"
-                  ><img src="../images/k-pop_treasure_sojunghwan.jpeg" alt="So Jung-hwan"
+                  ><img
+                    src="../images/k-pop_treasure_sojunghwan.jpeg"
+                    alt="So Jung-hwan"
                 /></a>
               </div>
             </div>
